--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,12 +17,16 @@ footer{
     padding-right: 0;
   }
 
-  .img-fit{
-      width: 100%;
-      height: 400px;
-  }
+.img-fit{
+    width: 100%;
+    height: 400px;
+}
 
-  .logo{
-      height: 50px;
-      width: 50px;
-  }
+.logo{
+    height: 50px;
+    width: 50px;
+}
+
+.card-text{
+    font-size: 13px;
+}
